# she-rust

./: Cargo.toml  readme.md
examples/: large.rs  main.rs
src/: lib.rs
tests/: test.rs
